- updated pot and po files

--- a/po/bn.po
+++ b/po/bn.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Bengali <https://l10n.opensuse.org/projects/snapper/master/bn/"
-">\n"
+"Language-Team: Bengali <https://l10n.opensuse.org/projects/snapper/master/bn/>\n"
 "Language: bn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -295,6 +294,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -769,6 +771,10 @@ msgid "Invalid group (%s)."
 msgstr " CRL কারণ অবৈধ "
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "অবৈধ প্রকার %1."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "অবৈধ প্রকার %1."
 
@@ -1062,6 +1068,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "অবৈধ প্রকার %1."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
