--- a/po/gu.po
+++ b/po/gu.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Gujarati <https://l10n.opensuse.org/projects/snapper/master/"
-"gu/>\n"
+"Language-Team: Gujarati <https://l10n.opensuse.org/projects/snapper/master/gu/>\n"
 "Language: gu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -298,6 +297,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -772,6 +774,10 @@ msgid "Invalid group (%s)."
 msgstr "CRL રિઝન અમાન્ય."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "અમાન્ય પ્રકાર %1."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "અમાન્ય પ્રકાર %1."
 
@@ -1065,6 +1071,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "અમાન્ય પ્રકાર %1."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
