--- a/po/ku.po
+++ b/po/ku.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Kurdish <https://l10n.opensuse.org/projects/snapper/master/ku/"
-">\n"
+"Language-Team: Kurdish <https://l10n.opensuse.org/projects/snapper/master/ku/>\n"
 "Language: ku\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -305,6 +304,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -756,6 +758,10 @@ msgid "Invalid group (%s)."
 msgstr "Vebijêrka nederbasdar: %1"
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Vebijêrka nederbasdar: %1"
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Vebijêrka nederbasdar: %1"
 
@@ -1047,6 +1053,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Vebijêrka nederbasdar: %1"
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
