--- a/po/mk.po
+++ b/po/mk.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Macedonian <https://l10n.opensuse.org/projects/snapper/master/"
-"mk/>\n"
+"Language-Team: Macedonian <https://l10n.opensuse.org/projects/snapper/master/mk/>\n"
 "Language: mk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -295,6 +294,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 msgid "--machine-readable <format>"
@@ -734,6 +736,10 @@ msgstr ""
 msgid "Invalid group (%s)."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr ""
@@ -1023,6 +1029,9 @@ msgid "Set JSON output format."
 msgstr ""
 
 msgid "Set a machine-readable output format (csv, json)."
+msgstr ""
+
+msgid "Set logger type."
 msgstr ""
 
 msgid "Set name of backup-config to use."
