--- a/po/ro.po
+++ b/po/ro.po
@@ -14,17 +14,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenSUSE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Romanian <https://l10n.opensuse.org/projects/snapper/master/"
-"ro/>\n"
+"Language-Team: Romanian <https://l10n.opensuse.org/projects/snapper/master/ro/>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
-"20)) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2;\n"
 "X-Generator: Weblate 5.12.2\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -319,6 +317,9 @@ msgstr ""
 msgid "--jsonout"
 msgstr ""
 
+msgid "--logger-type <type>"
+msgstr ""
+
 #, fuzzy
 msgid "--machine-readable <format>"
 msgstr "Date de emitere invalide."
@@ -409,14 +410,11 @@ msgstr ""
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Nu se poate șterge instantaneul %d, deoarece acesta este sistemul curent."
+msgstr "Nu se poate șterge instantaneul %d, deoarece acesta este sistemul curent."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Nu se poate șterge instantaneul %d, deoarece este instantaneul montat în "
-"prezent."
+msgstr "Nu se poate șterge instantaneul %d, deoarece este instantaneul montat în prezent."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
@@ -784,6 +782,10 @@ msgid "Invalid group (%s)."
 msgstr "Motiv CRL invalid."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Date de emitere invalide."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Date de emitere invalide."
 
@@ -1081,6 +1083,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Date de emitere invalide."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
