--- a/po/af.po
+++ b/po/af.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Afrikaans <https://l10n.opensuse.org/projects/snapper/master/"
-"af/>\n"
+"Language-Team: Afrikaans <https://l10n.opensuse.org/projects/snapper/master/af/>\n"
 "Language: af\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -298,6 +297,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -776,6 +778,10 @@ msgid "Invalid group (%s)."
 msgstr "Ongeldige CRL-rede."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Ongeldige soort %1."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Ongeldige soort %1."
 
@@ -1070,6 +1076,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Ongeldige soort %1."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
