--- a/po/ar.po
+++ b/po/ar.po
@@ -6,17 +6,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Arabic <https://l10n.opensuse.org/projects/snapper/master/ar/>"
-"\n"
+"Language-Team: Arabic <https://l10n.opensuse.org/projects/snapper/master/ar/>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
-"&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
 "X-Generator: Weblate 5.12.2\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -303,6 +301,10 @@ msgstr ""
 
 msgid "--jsonout"
 msgstr ""
+
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <type>\t\tنوع اللقطة."
 
 #, fuzzy
 msgid "--machine-readable <format>"
@@ -763,6 +765,10 @@ msgid "Invalid group (%s)."
 msgstr "مجموعة غير صالحة."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "نمط الجدول غير صالح %d."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "نمط الجدول غير صالح %d."
 
@@ -1084,6 +1090,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "نمط الجدول غير صالح %d."
 
+msgid "Set logger type."
+msgstr ""
+
 #, fuzzy
 msgid "Set name of backup-config to use."
 msgstr "\t--config, -c <name>\t\tعين اسم لتستخدمه للإعدادات."
@@ -1361,8 +1370,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"استخدام: اللقطة [--global-options] <command> [--command-options] [أمر-وسائط]"
+msgstr "استخدام: اللقطة [--global-options] <command> [--command-options] [أمر-وسائط]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
