--- a/po/bg.po
+++ b/po/bg.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Bulgarian <https://l10n.opensuse.org/projects/snapper/master/"
-"bg/>\n"
+"Language-Team: Bulgarian <https://l10n.opensuse.org/projects/snapper/master/bg/>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -307,6 +306,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -771,6 +773,10 @@ msgid "Invalid group (%s)."
 msgstr "Невалиден вход."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Невалиден вход."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Невалиден вход."
 
@@ -1070,6 +1076,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Невалиден вход."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
