--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -297,6 +296,10 @@ msgstr "--iso"
 msgid "--jsonout"
 msgstr "--jsonout"
 
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "--type, -t <Typ>"
+
 msgid "--machine-readable <format>"
 msgstr "--machine-readable <Format>"
 
@@ -464,9 +467,7 @@ msgstr "Befehl 'mount' benötigt mindestens ein Argument."
 
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Befehl 'rollback' kann nicht für ein nicht-root-Subvolume %s verwendet "
-"werden."
+msgstr "Befehl 'rollback' kann nicht für ein nicht-root-Subvolume %s verwendet werden."
 
 msgid "Command 'rollback' only available for btrfs."
 msgstr "Befehl 'rollback' nur für Btrfs verfügbar."
@@ -553,8 +554,7 @@ msgid "Creating read-only snapshot of default subvolume."
 msgstr "Nur-Lesen-Schnappschuss des Standard-Subvolumes erstellen."
 
 msgid "Creating read-write snapshot of current subvolume."
-msgstr ""
-"Lesen-Schreiben-Schnappschuss des derzeit laufenden Subvolumes erstellen."
+msgstr "Lesen-Schreiben-Schnappschuss des derzeit laufenden Subvolumes erstellen."
 
 #, c-format
 msgid "Creating read-write snapshot of snapshot %d."
@@ -723,6 +723,10 @@ msgstr "Ungültiger Freier Speicher Wert."
 msgid "Invalid group (%s)."
 msgstr "Ungültige Gruppe (%s)."
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Ungültiger Tabellenstil '%s'."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Ungültiges maschinenlesbares Format '%s'."
@@ -792,9 +796,7 @@ msgid "Manually set filesystem type."
 msgstr "Dateisystem-Typ manuell festlegen."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
-msgstr ""
-"Sie haben möglicherweise das Trennzeichen \"..\" zwischen den Snapshot-"
-"Nummern vergessen."
+msgstr "Sie haben möglicherweise das Trennzeichen \"..\" zwischen den Snapshot-Nummern vergessen."
 
 #. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
 msgid "MiB"
@@ -858,14 +860,11 @@ msgid "Operate without DBus."
 msgstr "Ohne DBus arbeiten."
 
 msgid "Option --from only supported for snapshots of type single."
-msgstr ""
-"Die Option --from wird nur für Schnappschüsse vom Typ Einzeln unterstützt."
+msgstr "Die Option --from wird nur für Schnappschüsse vom Typ Einzeln unterstützt."
 
 #. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
-msgstr ""
-"Die Option --read-write wird nur für Schnappschüsse vom Typ Einzeln "
-"unterstützt."
+msgstr "Die Option --read-write wird nur für Schnappschüsse vom Typ Einzeln unterstützt."
 
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
@@ -921,8 +920,7 @@ msgid "Quota error (%s)."
 msgstr "Quota-Fehler (%s)."
 
 msgid "Read files for which to undo changes from file."
-msgstr ""
-"Dateien, für die Änderungen zurückgenommen werden sollen, aus Datei lesen."
+msgstr "Dateien, für die Änderungen zurückgenommen werden sollen, aus Datei lesen."
 
 msgid "Read files to diff from file."
 msgstr "Dateien lesen zur Unterscheidung von der Datei."
@@ -1011,6 +1009,9 @@ msgstr "JSON-Ausgabeformat festlegen."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Ein Maschinen-lesbares Ausgabeformat (csv, json) festlegen."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr "Lege den Namen der zu verwendenden Konfiguration fest."
@@ -1105,18 +1106,13 @@ msgid "Target rmdir bin"
 msgstr "rmdir-Ziel-Bin"
 
 msgid "The ambit can be specified manually using the --ambit option."
-msgstr ""
-"Der Anwendungsbereich kann manuell durch die Verwendung der Option --ambit "
-"angegeben werden."
+msgstr "Der Anwendungsbereich kann manuell durch die Verwendung der Option --ambit angegeben werden."
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
-msgstr ""
-"Die Konfiguration \"Root\" ist nicht vorhanden. Snapper ist wahrscheinlich "
-"nicht konfiguriert."
+msgstr "Die Konfiguration \"Root\" ist nicht vorhanden. Snapper ist wahrscheinlich nicht konfiguriert."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Das kann passieren, wenn das System nicht für Rollbacks eingerichtet wurde."
+msgstr "Das kann passieren, wenn das System nicht für Rollbacks eingerichtet wurde."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -1273,9 +1269,7 @@ msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"Aufruf: snapper [--Globale-Optionen] <Befehl> [--Befehlsoptionen] "
-"[Befehlsargumente]"
+msgstr "Aufruf: snapper [--Globale-Optionen] <Befehl> [--Befehlsoptionen] [Befehlsargumente]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "Aufruf: snbk [--Globale-Optionen] <Befehl> [Befehlsargumente]"
