--- a/po/es.po
+++ b/po/es.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/"
-">\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -297,6 +296,10 @@ msgstr "--iso"
 msgid "--jsonout"
 msgstr "--jsonout"
 
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "--type, -t <tipo>"
+
 msgid "--machine-readable <format>"
 msgstr "--machine-readable <formato>"
 
@@ -390,19 +393,14 @@ msgstr "No se puede borrar la instantánea %d porque es el sistema actual."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"No se puede borrar la imagen %d porque es la imagen montada en estos "
-"momentos."
+msgstr "No se puede borrar la imagen %d porque es la imagen montada en estos momentos."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"No se puede borrar la imagen %d porque es la siguiente imagen que se va a "
-"montar."
+msgstr "No se puede borrar la imagen %d porque es la siguiente imagen que se va a montar."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"No se puede detectar el ámbito porque no se conoce el subvolumen por defecto."
+msgstr "No se puede detectar el ámbito porque no se conoce el subvolumen por defecto."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "No se puede revertir porque no se conoce el subvolumen por defecto."
@@ -754,6 +752,10 @@ msgstr "Valor de espacio libre no válido."
 msgid "Invalid group (%s)."
 msgstr "Grupo no válido (%s)."
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Estilo de tabla %s no válido."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Formato que puede leer el equipo %s no válido."
@@ -803,9 +805,7 @@ msgid "List configs:"
 msgstr "Listar configuraciones:"
 
 msgid "List snapshots from all accessible configs."
-msgstr ""
-"Muestra las instantáneas de todas las configuraciones a las que se puede "
-"acceder."
+msgstr "Muestra las instantáneas de todas las configuraciones a las que se puede acceder."
 
 msgid "List:"
 msgstr "Lista:"
@@ -826,9 +826,7 @@ msgid "Manually set filesystem type."
 msgstr "Establece manualmente el tipo de sistema de archivos."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
-msgstr ""
-"Puede que haya olvidado indica el delimitador '..' entre los números de las "
-"instantáneas."
+msgstr "Puede que haya olvidado indica el delimitador '..' entre los números de las instantáneas."
 
 #. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
 msgid "MiB"
@@ -876,8 +874,7 @@ msgid "Only use backup-config with automatic set."
 msgstr "Sólo usar configuraciones de respaldo con set automático."
 
 msgid "Only use backup-config with specified target-mode."
-msgstr ""
-"Sólo usar configuración de respaldo con el modo de destino especificado."
+msgstr "Sólo usar configuración de respaldo con el modo de destino especificado."
 
 #, c-format
 msgid "Opening file '%s' failed."
@@ -909,9 +906,7 @@ msgstr "PB"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
-msgstr ""
-"No hay coincidencia entre la ruta de origen de la configuración de respaldo "
-"y el subvolumen de configuración de snapper ('%s' vs. '%s')."
+msgstr "No hay coincidencia entre la ruta de origen de la configuración de respaldo y el subvolumen de configuración de snapper ('%s' vs. '%s')."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -990,17 +985,12 @@ msgstr[1] "La lista de ejecución falló para %d de %ld configuraciones de respa
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
 msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"La transferencia y eliminación falló para %d de %ld configuración de "
-"respaldo."
-msgstr[1] ""
-"La transferencia y eliminación falló para %d de %ld configuraciones de "
-"respaldo."
+msgstr[0] "La transferencia y eliminación falló para %d de %ld configuración de respaldo."
+msgstr[1] "La transferencia y eliminación falló para %d de %ld configuraciones de respaldo."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"La transferencia y eliminación de la configuración de respaldo '%s' falló."
+msgstr "La transferencia y eliminación de la configuración de respaldo '%s' falló."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
@@ -1050,6 +1040,9 @@ msgstr "Establece el formato de salida JSON."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Define un formato de salida que puede leer el equipo (csv, json)."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr "Defina el nombre de la configuración de respaldo a utilizar."
@@ -1150,13 +1143,10 @@ msgid "The ambit can be specified manually using the --ambit option."
 msgstr "El ámbito se puede especificar manualmente con la opción --ambit."
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
-msgstr ""
-"La raíz de configuración no existe. Es probable que snapper no se haya "
-"configurado."
+msgstr "La raíz de configuración no existe. Es probable que snapper no se haya configurado."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Esto puede suceder si el sistema no se ha configurado para la reversión."
+msgstr "Esto puede suceder si el sistema no se ha configurado para la reversión."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -1320,9 +1310,7 @@ msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"uso: snapper [--global-options] <comando> [--command-options] "
-"[argumentos-comando]"
+msgstr "uso: snapper [--global-options] <comando> [--command-options] [argumentos-comando]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "uso: snbk [--opciones-globales] <comando> [argumentos-comando]"
