--- a/po/fa.po
+++ b/po/fa.po
@@ -4,11 +4,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opensuse-i 18n\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Persian <https://l10n.opensuse.org/projects/snapper/master/fa/"
-">\n"
+"Language-Team: Persian <https://l10n.opensuse.org/projects/snapper/master/fa/>\n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -293,6 +292,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 msgid "--machine-readable <format>"
@@ -720,6 +722,10 @@ msgid "Invalid group (%s)."
 msgstr ""
 
 #, c-format
+msgid "Invalid logger-type '%s'."
+msgstr ""
+
+#, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr ""
 
@@ -1002,6 +1008,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr ""
 
+msgid "Set logger type."
+msgstr ""
+
 msgid "Set name of backup-config to use."
 msgstr ""
 
@@ -1258,9 +1267,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"استفاده: snapper [--global-options] <command> [--command-options] "
-"[command-arguments]"
+msgstr "استفاده: snapper [--global-options] <command> [--command-options] [command-arguments]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
