--- a/po/hu.po
+++ b/po/hu.po
@@ -4,11 +4,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Hungarian <https://l10n.opensuse.org/projects/snapper/master/"
-"hu/>\n"
+"Language-Team: Hungarian <https://l10n.opensuse.org/projects/snapper/master/hu/>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -312,6 +311,10 @@ msgid "--jsonout"
 msgstr ""
 
 #, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <típus>\t\tPillanatkép típusa."
+
+#, fuzzy
 msgid "--machine-readable <format>"
 msgstr "Érvénytelen táblázatstílus: %d."
 
@@ -409,15 +412,11 @@ msgstr "A(z) %d pillanatkép nem törölhető, mivel az aktuális rendszerben va
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"A(z) %d pillanatkép nem törölhető, mivel ez az aktuálisan csatlakoztatott "
-"pillanatkép."
+msgstr "A(z) %d pillanatkép nem törölhető, mivel ez az aktuálisan csatlakoztatott pillanatkép."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"A(z) %d pillanatkép nem törölhető, mivel ez a következő csatlakoztatandó "
-"pillanatkép."
+msgstr "A(z) %d pillanatkép nem törölhető, mivel ez a következő csatlakoztatandó pillanatkép."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
@@ -500,9 +499,7 @@ msgstr "A 'rollback' parancs csak btrfs fájlrendszer esetén használható."
 
 # SLE12
 msgid "Command 'rollback' takes either one or no argument."
-msgstr ""
-"A 'rollback' parancs egy argumentumot fogad el, illetve argumentum nélkül "
-"használható."
+msgstr "A 'rollback' parancs egy argumentumot fogad el, illetve argumentum nélkül használható."
 
 # SLE12
 msgid "Command 'set-config' needs at least one argument."
@@ -797,6 +794,10 @@ msgid "Invalid group (%s)."
 msgstr "Érvénytelen csoport."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Érvénytelen táblázatstílus: %d."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Érvénytelen táblázatstílus: %d."
 
@@ -871,8 +872,7 @@ msgid "Manually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tFájlrendszer típusának beállítása kézzel."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
-msgstr ""
-"Lehet, hogy elfeledkezett a pillanatképek száma közötti '..' elválasztóról."
+msgstr "Lehet, hogy elfeledkezett a pillanatképek száma közötti '..' elválasztóról."
 
 #. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
 msgid "MiB"
@@ -1107,6 +1107,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Érvénytelen táblázatstílus: %d."
 
+msgid "Set logger type."
+msgstr ""
+
 #, fuzzy
 msgid "Set name of backup-config to use."
 msgstr "\t--config, -c <név>\t\tFelhasznált beállítás nevének megadása."
@@ -1215,8 +1218,7 @@ msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
-msgstr ""
-"A 'root' konfiguráció nem létezik. A snapper valószínűleg nincs konfigurálva."
+msgstr "A 'root' konfiguráció nem létezik. A snapper valószínűleg nincs konfigurálva."
 
 msgid "This can happen if the system was not set up for rollback."
 msgstr ""
@@ -1389,9 +1391,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"használat: snapper [--global-options] <parancs> [--command-options] "
-"[command-arguments]"
+msgstr "használat: snapper [--global-options] <parancs> [--command-options] [command-arguments]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
