--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -293,6 +292,10 @@ msgstr "--iso"
 msgid "--jsonout"
 msgstr "--jsonout"
 
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "--type, -t <type>"
+
 msgid "--machine-readable <format>"
 msgstr "--machine-readable <format>"
 
@@ -385,15 +388,11 @@ msgstr "Tidak dapat menghapus snapshot %d karena ini adalah sistem saat ini."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang "
-"saat ini."
+msgstr "Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang saat ini."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang "
-"selanjutnya."
+msgstr "Tidak dapat menghapus snapshot %d karena ini adalah snapshot yang dipasang selanjutnya."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Tidak dapat mendeteksi ambit sejak subvolume bawaan tidak diketahui."
@@ -719,6 +718,10 @@ msgstr "Nilai ruang bebas tidak valid."
 msgid "Invalid group (%s)."
 msgstr "Grup tidak valid (%s)."
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Gaya tabel '%s' tidak valid."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Format '%s' yang dapat dibaca mesin tidak valid."
@@ -869,9 +872,7 @@ msgstr "PB"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
-msgstr ""
-"Ketidakcocokan jalur antara jalur sumber dari backup-config dan subvolume "
-"dari snapper config ('%s' vs '%s')."
+msgstr "Ketidakcocokan jalur antara jalur sumber dari backup-config dan subvolume dari snapper config ('%s' vs '%s')."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -1000,6 +1001,9 @@ msgstr "Atur format keluaran JSON."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Atur format keluaran yang dapat dibaca oleh mesin (csv, json)."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr "Atur nama konfigurasi cadangan (backup-config) yang akan digunakan."
@@ -1257,9 +1261,7 @@ msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"penggunaan: snapper [--global-options] <command> [--command-options] "
-"[command-arguments]"
+msgstr "penggunaan: snapper [--global-options] <command> [--command-options] [command-arguments]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "penggunaan: snbk [--global-options] <command> [command-arguments]"
