--- a/po/it.po
+++ b/po/it.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 14:59+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/"
-">\n"
+"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -294,6 +293,10 @@ msgstr "--iso"
 msgid "--jsonout"
 msgstr "--jsonout"
 
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "--type, -t <tipo>"
+
 msgid "--machine-readable <format>"
 msgstr "--machine-readable <formato>"
 
@@ -383,29 +386,21 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Impossibile eliminare l'istantanea %d poiché utilizzata attualmente dal "
-"sistema."
+msgstr "Impossibile eliminare l'istantanea %d poiché utilizzata attualmente dal sistema."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Impossibile eliminare l'istantanea %d poiché si tratta di quella montata "
-"attualmente."
+msgstr "Impossibile eliminare l'istantanea %d poiché si tratta di quella montata attualmente."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Impossibile eliminare l'istantanea %d poiché si tratta della prossima che "
-"deve essere montata."
+msgstr "Impossibile eliminare l'istantanea %d poiché si tratta della prossima che deve essere montata."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Impossibile rilevare l'ambito perché il sotto-volume è sconosciuto."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Impossibile effettuare il ripristino perché il sotto-volume predefinito è "
-"sconosciuto."
+msgstr "Impossibile effettuare il ripristino perché il sotto-volume predefinito è sconosciuto."
 
 msgid "Character separator for CSV output format."
 msgstr "Separatore di carattere per formato di output CSV."
@@ -470,8 +465,7 @@ msgstr "Il comando 'mount' richiede almeno un argomento."
 
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Il comando 'rollback' non può essere usato su un sottovolume non radice %s."
+msgstr "Il comando 'rollback' non può essere usato su un sottovolume non radice %s."
 
 msgid "Command 'rollback' only available for btrfs."
 msgstr "Il comando 'rollback' è disponibile solo per btrfs."
@@ -530,8 +524,7 @@ msgstr "Il dato di configurazione '%s' ha la chiave vuota."
 
 #, c-format
 msgid "Could not make enough free space available for path '%s'."
-msgstr ""
-"Impossibile creare abbastanza spazio libero disponibile per il percorso '%s'."
+msgstr "Impossibile creare abbastanza spazio libero disponibile per il percorso '%s'."
 
 msgid "Could not make enough free space available."
 msgstr "Impossibile creare abbastanza spazio libero disponibile."
@@ -559,8 +552,7 @@ msgid "Creating read-only snapshot of default subvolume."
 msgstr "Creazione di un'istantanea in sola lettura del sottovolume predefinito."
 
 msgid "Creating read-write snapshot of current subvolume."
-msgstr ""
-"Creazione di un'istantanea in lettura/scrittura del sottovolume corrente."
+msgstr "Creazione di un'istantanea in lettura/scrittura del sottovolume corrente."
 
 #, c-format
 msgid "Creating read-write snapshot of snapshot %d."
@@ -729,6 +721,10 @@ msgstr "Valore dello spazio libero non valido."
 msgid "Invalid group (%s)."
 msgstr "Gruppo non valido (%s)."
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Stile della tabella '%s' non valido."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Formato leggibile dalla macchina '%s' non valido."
@@ -798,9 +794,7 @@ msgid "Manually set filesystem type."
 msgstr "Imposta manualmente il tipo di file system."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
-msgstr ""
-"È possibile che si sia dimenticato il delimitatore '..' tra i numeri di "
-"snapshot."
+msgstr "È possibile che si sia dimenticato il delimitatore '..' tra i numeri di snapshot."
 
 #. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
 msgid "MiB"
@@ -880,9 +874,7 @@ msgstr "PB"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
-msgstr ""
-"Mancata corrispondenza dei percorsi tra source-path di backup-config e il "
-"sottovolume della configurazione snapper ('%s' rispetto a '%s')."
+msgstr "Mancata corrispondenza dei percorsi tra source-path di backup-config e il sottovolume della configurazione snapper ('%s' rispetto a '%s')."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -910,13 +902,10 @@ msgid "Print version and exit."
 msgstr "Stampa la versione ed esce."
 
 msgid "Probing extra information for source snapshots."
-msgstr ""
-"Rilevamento delle informazioni supplementari delle istantanee di origine."
+msgstr "Rilevamento delle informazioni supplementari delle istantanee di origine."
 
 msgid "Probing extra information for target snapshots."
-msgstr ""
-"Rilevamento delle informazioni supplementari delle istantanee di "
-"destinazione."
+msgstr "Rilevamento delle informazioni supplementari delle istantanee di destinazione."
 
 msgid "Probing source snapshots."
 msgstr "Rilevamento delle istantanee di origine."
@@ -943,17 +932,12 @@ msgstr "Lancia il comando e crea snapshot precedenti e successive."
 #, c-format
 msgid "Running delete failed for %d of %ld backup config."
 msgid_plural "Running delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Esecuzione dell'eliminazione non riuscita per %d di %ld configurazione di "
-"backup."
-msgstr[1] ""
-"Esecuzione dell'eliminazione non riuscita per %d di %ld configurazioni di "
-"backup."
+msgstr[0] "Esecuzione dell'eliminazione non riuscita per %d di %ld configurazione di backup."
+msgstr[1] "Esecuzione dell'eliminazione non riuscita per %d di %ld configurazioni di backup."
 
 #, c-format
 msgid "Running delete for backup config '%s' failed."
-msgstr ""
-"Esecuzione dell'eliminazione non riuscita per configurazione di backup '%s'."
+msgstr "Esecuzione dell'eliminazione non riuscita per configurazione di backup '%s'."
 
 #, c-format
 msgid "Running delete for backup config '%s'."
@@ -962,10 +946,8 @@ msgstr "Esecuzione dell'eliminazione per configurazione di backup '%s'."
 #, c-format
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
-msgstr[0] ""
-"Esecuzione dell'elenco non riuscita per %d di %ld configurazione di backup."
-msgstr[1] ""
-"Esecuzione dell'elenco non riuscita per %d di %ld configurazioni di backup."
+msgstr[0] "Esecuzione dell'elenco non riuscita per %d di %ld configurazione di backup."
+msgstr[1] "Esecuzione dell'elenco non riuscita per %d di %ld configurazioni di backup."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
@@ -975,15 +957,11 @@ msgstr[1] "Esecuzione del trasferimento non riuscita per %d di %ld configurazion
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"Esecuzione del trasferimento e dell'eliminazione non riuscita per "
-"configurazione di backup '%s'."
+msgstr "Esecuzione del trasferimento e dell'eliminazione non riuscita per configurazione di backup '%s'."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
-msgstr ""
-"Esecuzione del trasferimento e dell'eliminazione per configurazione di "
-"backup '%s'."
+msgstr "Esecuzione del trasferimento e dell'eliminazione per configurazione di backup '%s'."
 
 #, c-format
 msgid "Running transfer failed for %d of %ld backup config."
@@ -993,8 +971,7 @@ msgstr[1] "Esecuzione del trasferimento non riuscita per %d di %ld configurazion
 
 #, c-format
 msgid "Running transfer for backup config '%s' failed."
-msgstr ""
-"Esecuzione del trasferimento non riuscita per configurazione di backup '%s'."
+msgstr "Esecuzione del trasferimento non riuscita per configurazione di backup '%s'."
 
 #, c-format
 msgid "Running transfer for backup config '%s'."
@@ -1030,6 +1007,9 @@ msgstr "Imposta il formato di output JSON."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Imposta un formato di output leggibile dal computer (csv, json)."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr "Imposta il nome della configurazione di backup da usare."
@@ -1127,13 +1107,10 @@ msgid "The ambit can be specified manually using the --ambit option."
 msgstr "L'ambito può essere specificato manualmente usando l'opzione --ambit."
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
-msgstr ""
-"Configurazione 'root' inesistente. È probabile che snapper non sia "
-"configurato."
+msgstr "Configurazione 'root' inesistente. È probabile che snapper non sia configurato."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Questo può accadere se il sistema non è stato impostato per il ripristino."
+msgstr "Questo può accadere se il sistema non è stato impostato per il ripristino."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -1272,8 +1249,7 @@ msgid "nothing to do"
 msgstr "nessuna operazione da eseguire"
 
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr ""
-"l'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
+msgstr "l'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
 
 msgid "snbk delete [numbers]"
 msgstr "snbk delete [numeri]"
@@ -1291,9 +1267,7 @@ msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"uso: snapper [--opzioni-globali] <comando> [--opzioni-del-comando] "
-"[argomenti-del-comando]"
+msgstr "uso: snapper [--opzioni-globali] <comando> [--opzioni-del-comando] [argomenti-del-comando]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "uso: snbk [--global-options] <comando> [command-arguments]"
