--- a/po/lo.po
+++ b/po/lo.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2006-01-04 08:58+0100\n"
 "Last-Translator: i18n@suse.de\n"
 "Language-Team: Lao <i18n@suse.de>\n"
@@ -289,6 +289,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 msgid "--machine-readable <format>"
@@ -726,6 +729,10 @@ msgstr ""
 msgid "Invalid group (%s)."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Failed to parse: %s."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr ""
@@ -1009,6 +1016,9 @@ msgid "Set JSON output format."
 msgstr ""
 
 msgid "Set a machine-readable output format (csv, json)."
+msgstr ""
+
+msgid "Set logger type."
 msgstr ""
 
 msgid "Set name of backup-config to use."
