--- a/po/lt.po
+++ b/po/lt.po
@@ -9,17 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LCN (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Lithuanian <https://l10n.opensuse.org/projects/snapper/master/"
-"lt/>\n"
+"Language-Team: Lithuanian <https://l10n.opensuse.org/projects/snapper/master/lt/>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 0 : n%10>=2 && (n%100<10 || "
-"n%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3;\n"
 "X-Generator: Weblate 5.12.2\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -305,6 +303,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -763,6 +764,10 @@ msgid "Invalid group (%s)."
 msgstr "Netinkamas potomis."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Netinkamas lentelės stilius %d."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Netinkamas lentelės stilius %d."
 
@@ -1065,6 +1070,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Netinkamas lentelės stilius %d."
 
+msgid "Set logger type."
+msgstr ""
+
 msgid "Set name of backup-config to use."
 msgstr ""
 
@@ -1334,9 +1342,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"naudojimas: snapper [--visuotinės-parinktys] <komanda> [--komandos-parinktys]"
-" [komandos-argumentai]"
+msgstr "naudojimas: snapper [--visuotinės-parinktys] <komanda> [--komandos-parinktys] [komandos-argumentai]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
