--- a/po/nb.po
+++ b/po/nb.po
@@ -7,11 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Norwegian Bokmål <https://l10n.opensuse.org/projects/snapper/"
-"master/nb_NO/>\n"
+"Language-Team: Norwegian Bokmål <https://l10n.opensuse.org/projects/snapper/master/nb_NO/>\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -309,6 +308,10 @@ msgstr ""
 
 msgid "--jsonout"
 msgstr ""
+
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <type>\t\tType øyeblikksbilde."
 
 #, fuzzy
 msgid "--machine-readable <format>"
@@ -774,6 +777,10 @@ msgid "Invalid group (%s)."
 msgstr "Ugyldig undervolum."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Ugyldig tabellstil %d."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Ugyldig tabellstil %d."
 
@@ -1077,6 +1084,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Ugyldig tabellstil %d."
 
+msgid "Set logger type."
+msgstr ""
+
 #, fuzzy
 msgid "Set name of backup-config to use."
 msgstr "\t--config, -c <navn>\t\tNavn som skal brukes i oppsettet."
@@ -1351,9 +1361,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"bruk: snapper [--globale valg] <kommando> [--kommandovalg] "
-"[kommandoargumenter]"
+msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargumenter]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
