--- a/po/pa.po
+++ b/po/pa.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Punjabi <https://l10n.opensuse.org/projects/snapper/master/pa/"
-">\n"
+"Language-Team: Punjabi <https://l10n.opensuse.org/projects/snapper/master/pa/>\n"
 "Language: pa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -317,6 +316,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -791,6 +793,10 @@ msgid "Invalid group (%s)."
 msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
 
@@ -1091,6 +1097,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
