--- a/po/sl.po
+++ b/po/sl.po
@@ -8,17 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Slovenian <https://l10n.opensuse.org/projects/snapper/master/"
-"sl/>\n"
+"Language-Team: Slovenian <https://l10n.opensuse.org/projects/snapper/master/sl/>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
-"n%100==4 ? 2 : 3;\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3;\n"
 "X-Generator: Weblate 5.12.2\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -300,6 +298,10 @@ msgstr "--iso"
 msgid "--jsonout"
 msgstr "--jsonout"
 
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "--type, -t <vrsta>"
+
 msgid "--machine-readable <format>"
 msgstr "--machine-readable <oblika>"
 
@@ -398,9 +400,7 @@ msgstr "Posnetka %d ni moč izbrisati, ker je to trenutno priklopljeni posnetek.
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Posnetka %d ni moč izbrisati, ker je to posnetek, ki bo priklopljen kot "
-"naslednji."
+msgstr "Posnetka %d ni moč izbrisati, ker je to posnetek, ki bo priklopljen kot naslednji."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Ambita ni moč zaznati, ker privzeti podnosilec ni znan."
@@ -471,8 +471,7 @@ msgstr "Ukaz »mount« potrebuje vsaj en argument."
 
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Ukaza »rollback« ni mogoče uporabljati na podnosilcu %s, ki ni korenski."
+msgstr "Ukaza »rollback« ni mogoče uporabljati na podnosilcu %s, ki ni korenski."
 
 msgid "Command 'rollback' only available for btrfs."
 msgstr "Ukaz »rollback« je na voljo samo za datotečni sistem btrfs."
@@ -741,6 +740,10 @@ msgstr "Neveljavna vrednost razpoložljivega prostora."
 msgid "Invalid group (%s)."
 msgstr "Neveljavna skupina (%s)."
 
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Neveljaven slog razpredelnice »%s«."
+
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Neveljavna računalniško berljiva oblika »%s«."
@@ -892,9 +895,7 @@ msgstr "PB"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
-msgstr ""
-"Neujemanje poti med »source-path« v »backup-config« in podnosilcem v "
-"nastavitvah za snapper (»%s« in »%s«)."
+msgstr "Neujemanje poti med »source-path« v »backup-config« in podnosilcem v nastavitvah za snapper (»%s« in »%s«)."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -953,23 +954,14 @@ msgstr "Zažene ukaz in ustvari posnetka pred in po."
 #, c-format
 msgid "Running delete failed for %d of %ld backup config."
 msgid_plural "Running delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje brisanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running delete for backup config '%s' failed."
-msgstr ""
-"Izvajanje brisanja za nastavitev varnostnega kopiranja »%s« je spodletelo."
+msgstr "Izvajanje brisanja za nastavitev varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running delete for backup config '%s'."
@@ -978,40 +970,22 @@ msgstr "Izvajanje brisanja za nastavitev varnostnega kopiranja »%s«."
 #, c-format
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
 msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitve "
-"varnostnega kopiranja."
-msgstr[1] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
-msgstr[2] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
-msgstr[3] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
+msgstr[0] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s« je "
-"spodletelo."
+msgstr "Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
@@ -1020,23 +994,14 @@ msgstr "Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s«
 #, c-format
 msgid "Running transfer failed for %d of %ld backup config."
 msgid_plural "Running transfer failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje prenosa je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer for backup config '%s' failed."
-msgstr ""
-"Izvajanje prenosa za nastavitve varnostnega kopiranja »%s« je spodletelo."
+msgstr "Izvajanje prenosa za nastavitve varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running transfer for backup config '%s'."
@@ -1072,6 +1037,9 @@ msgstr "Nastavi izpis v obliki JSON."
 
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Nastavi računalniško berljivo obliko izpisa (csv, json)."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr "Nastavi ime nastavitev varnostnega kopiranja, ki bodo uporabljene."
@@ -1335,9 +1303,7 @@ msgid "snbk transfer-and-delete"
 msgstr "snbk transfer-and-delete"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"uporaba: snapper [--splošne-možnosti] <ukaz> [--ukazne-možnosti] "
-"[ukazni-argumenti]"
+msgstr "uporaba: snapper [--splošne-možnosti] <ukaz> [--ukazne-možnosti] [ukazni-argumenti]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
 msgstr "uporaba: snbk [--splošne-možnosti] <ukaz> [ukazni-argumenti]"
