--- a/po/sv.po
+++ b/po/sv.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/"
-">\n"
+"Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -356,6 +355,11 @@ msgstr ""
 
 # SLE12
 #, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <typ>\t\tTyp för ögonblicksbild."
+
+# SLE12
+#, fuzzy
 msgid "--machine-readable <format>"
 msgstr "Ogiltigt maskinläsbart format '%s'."
 
@@ -456,8 +460,7 @@ msgstr "B"
 # SLE12
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Det går inte att ta bort ögonblicksbilden %d eftersom den används i systemet."
+msgstr "Det går inte att ta bort ögonblicksbilden %d eftersom den används i systemet."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
@@ -465,9 +468,7 @@ msgstr "Det går inte att radera ögonblicksbilden %d eftersom den är monterad.
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Det går inte att radera ögonblicksbilden %d eftersom den står på tur att "
-"monteras."
+msgstr "Det går inte att radera ögonblicksbilden %d eftersom den står på tur att monteras."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Kan inte detektera omfång eftersom standarddelvolymen är okänd."
@@ -560,9 +561,7 @@ msgstr "Kommandot mount måste ha minst ett argument."
 # SLE12
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Kommandot \"rollback\" kan inte användas på en undervolym %s som inte är en "
-"rot."
+msgstr "Kommandot \"rollback\" kan inte användas på en undervolym %s som inte är en rot."
 
 # SLE12
 msgid "Command 'rollback' only available for btrfs."
@@ -639,8 +638,7 @@ msgstr "Konfigurationsdata %s har tom nyckel."
 
 #, c-format
 msgid "Could not make enough free space available for path '%s'."
-msgstr ""
-"Kunde inte göra tillräckligt med ledigt utrymme tillgängligt för sökväg '%s'."
+msgstr "Kunde inte göra tillräckligt med ledigt utrymme tillgängligt för sökväg '%s'."
 
 msgid "Could not make enough free space available."
 msgstr "Kunde inte göra tillräckligt med ledigt utrymme tillgängligt."
@@ -676,15 +674,12 @@ msgstr "Skapar skrivskyddad ögonblicksbild av standardundervolymen."
 
 # SLE12
 msgid "Creating read-write snapshot of current subvolume."
-msgstr ""
-"Skapar ögonblicksbild med läs- och skrivrättigheter av den aktuella "
-"undervolymen."
+msgstr "Skapar ögonblicksbild med läs- och skrivrättigheter av den aktuella undervolymen."
 
 # SLE12
 #, c-format
 msgid "Creating read-write snapshot of snapshot %d."
-msgstr ""
-"Skapar ögonblicksbild med läs- och skrivrättigheter av ögonblicksbilden %d."
+msgstr "Skapar ögonblicksbild med läs- och skrivrättigheter av ögonblicksbilden %d."
 
 # SLE12
 msgid "Creating snapshot failed."
@@ -890,6 +885,11 @@ msgid "Invalid group (%s)."
 msgstr "Ogiltig grupp (%s)."
 
 # SLE12
+#, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Ogiltig tabellstil '%s'"
+
+# SLE12
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Ogiltigt maskinläsbart format '%s'."
@@ -1059,8 +1059,7 @@ msgstr "Alternativet --from stöds bara för ögonblicksbilder av typen enkel."
 
 #. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
-msgstr ""
-"Alternativet --read-write stöds bara för ögonblicksbilder av typen enkel."
+msgstr "Alternativet --read-write stöds bara för ögonblicksbilder av typen enkel."
 
 #. TRANSLATORS: symbol for "peta" (best keep untranslated)
 msgid "P"
@@ -1237,6 +1236,9 @@ msgstr "\t--jsonout\t\t\tStäll in JSON som utdata format."
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "\t--machine-readable <format>\tStäll in ett maskinläsbart utdataformat (csv, json)."
 
+msgid "Set logger type."
+msgstr ""
+
 # SLE12
 #, fuzzy
 msgid "Set name of backup-config to use."
@@ -1358,8 +1360,7 @@ msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Konfig. 'root' existerar inte. Troligtvis är inte snapper konfigurerad."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Detta kan hända om systemet inte har konfigurerats för att rullas tillbaka."
+msgstr "Detta kan hända om systemet inte har konfigurerats för att rullas tillbaka."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -1556,9 +1557,7 @@ msgstr ""
 
 # SLE12
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"usage: snapper [--globala alternativ] <kommando> [--kommandoalternativ] "
-"[kommandoargument]"
+msgstr "usage: snapper [--globala alternativ] <kommando> [--kommandoalternativ] [kommandoargument]"
 
 # SLE12
 #, fuzzy
