--- a/po/ta.po
+++ b/po/ta.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Tamil <https://l10n.opensuse.org/projects/snapper/master/ta/>"
-"\n"
+"Language-Team: Tamil <https://l10n.opensuse.org/projects/snapper/master/ta/>\n"
 "Language: ta\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -301,6 +300,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -774,6 +776,10 @@ msgid "Invalid group (%s)."
 msgstr "செல்லாத சிஆர்எல் காரணம்."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "செல்லாத வகை %1."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "செல்லாத வகை %1."
 
@@ -1067,6 +1073,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "செல்லாத வகை %1."
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
