--- a/po/tr.po
+++ b/po/tr.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/"
-">\n"
+"Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -345,6 +344,10 @@ msgstr ""
 
 msgid "--jsonout"
 msgstr ""
+
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <type>\t\tAnlık görüntü türü."
 
 #, fuzzy
 msgid "--machine-readable <format>"
@@ -827,6 +830,10 @@ msgid "Invalid group (%s)."
 msgstr "Geçersiz '%s' anlık görüntüsü."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "%d geçersiz tablo stili."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "%d geçersiz tablo stili."
 
@@ -1136,6 +1143,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "%d geçersiz tablo stili."
+
+msgid "Set logger type."
+msgstr ""
 
 #, fuzzy
 msgid "Set name of backup-config to use."
