--- a/po/uk.po
+++ b/po/uk.po
@@ -8,17 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Ukrainian <https://l10n.opensuse.org/projects/snapper/master/"
-"uk/>\n"
+"Language-Team: Ukrainian <https://l10n.opensuse.org/projects/snapper/master/uk/>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 5.12.2\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -305,6 +303,10 @@ msgstr ""
 
 msgid "--jsonout"
 msgstr ""
+
+#, fuzzy
+msgid "--logger-type <type>"
+msgstr "\t--type, -t <тип>\t\tТип знімка."
 
 #, fuzzy
 msgid "--machine-readable <format>"
@@ -764,6 +766,10 @@ msgid "Invalid group (%s)."
 msgstr "Нечинна група."
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Непридатний стиль таблиці %d."
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Непридатний стиль таблиці %d."
 
@@ -1072,6 +1078,9 @@ msgstr ""
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Непридатний стиль таблиці %d."
 
+msgid "Set logger type."
+msgstr ""
+
 #, fuzzy
 msgid "Set name of backup-config to use."
 msgstr "\t--config, -c <ім'я>\t\tНазва використовуваної конфігурації."
@@ -1347,9 +1356,7 @@ msgid "snbk transfer-and-delete"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"використання: snapper [--загальні параметри] <команда> [--параметри команди] "
-"[аргументи команди]"
+msgstr "використання: snapper [--загальні параметри] <команда> [--параметри команди] [аргументи команди]"
 
 #, fuzzy
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
