--- a/po/wa.po
+++ b/po/wa.po
@@ -7,11 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yast memory\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-25 11:00+0200\n"
+"POT-Creation-Date: 2025-07-23 11:53+0200\n"
 "PO-Revision-Date: 2025-07-22 15:00+0000\n"
 "Last-Translator: Julia Faltenbacher <julia.faltenbacher@suse.com>\n"
-"Language-Team: Walloon <https://l10n.opensuse.org/projects/snapper/master/wa/"
-">\n"
+"Language-Team: Walloon <https://l10n.opensuse.org/projects/snapper/master/wa/>\n"
 "Language: wa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -300,6 +299,9 @@ msgid "--iso"
 msgstr ""
 
 msgid "--jsonout"
+msgstr ""
+
+msgid "--logger-type <type>"
 msgstr ""
 
 #, fuzzy
@@ -750,6 +752,10 @@ msgid "Invalid group (%s)."
 msgstr "Li sôre di sistinme di fitchî n' clope nén"
 
 #, fuzzy, c-format
+msgid "Invalid logger-type '%s'."
+msgstr "Li sôre di sistinme di fitchî n' clope nén"
+
+#, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Li sôre di sistinme di fitchî n' clope nén"
 
@@ -1044,6 +1050,9 @@ msgstr ""
 #, fuzzy
 msgid "Set a machine-readable output format (csv, json)."
 msgstr "Li sôre di sistinme di fitchî n' clope nén"
+
+msgid "Set logger type."
+msgstr ""
 
 msgid "Set name of backup-config to use."
 msgstr ""
